# AutoPress

./: .gitignore  archive.md  leftoff.md  main.py  pyproject.toml  thinkboard.md
dagens/: articles.json  gen_articles.json
models/: chatgpt.py  wordpress.py
nyheder24/: articles.json  gen_articles.json  log.md
senest/: articles.json  gen_articles.json  log.md
